syntax = "proto3";

package whatsapp_stickers;

message SendToWhatsAppPayload {

    message Stickers {
        repeated string all = 1;
    }

    string identifier = 1;
    string name = 2;
    string publisher = 3;
    string trayImageFileName = 4;
    string publisherWebsite = 5;
    string privacyPolicyWebsite = 6;
    string licenseAgreementWebsite = 7;
    map<string, Stickers> stickers = 8;
}